[gd_scene load_steps=3 format=3 uid="uid://5aqm5cvym304"]

[ext_resource type="Script" path="res://scenes/components/interactable/interactable_detector.gd" id="1_otgpf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7clc4"]
radius = 32.0

[node name="InteractableDetector" type="Area2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_otgpf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7clc4")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
